@@ -11,29 +11,28 @@ EXTRA_DIST =			\
 ##
 # Local definitions
 testcase_dist =							\
-	imsettings-request					\
-	imsettings-request/currentim				\
-	imsettings-request/currentim/.xinputrc			\
-	imsettings-request/currentim/xinputrc			\
 	imsettings-request/currentim/xinput.d			\
 	imsettings-request/currentim/xinput.d/test-scim.conf	\
 	imsettings-request/currentim/xinput.d/test-scim2.conf	\
-	imsettings-request/fake					\
+	imsettings-request/currentim/.xinputrc			\
+	imsettings-request/currentim/xinputrc			\
 	imsettings-request/fake/xinput.d			\
 	imsettings-request/fake/xinput.d/.xinputrc		\
 	imsettings-request/fake/xinput.d/xinputrc		\
-	imsettings-request/general				\
 	imsettings-request/general/xinput.d			\
 	imsettings-request/general/xinput.d/test-scim.conf	\
-	imsettings-request/noent				\
 	imsettings-request/noent/xinput.d			\
-	issue_11						\
 	issue_11/xinput.d					\
 	issue_11/xinput.d/scim.conf_				\
 	issue_5							\
 	issue_5/xinputrc					\
 	issue_5/xinput.d					\
+	rhbz_453358/case1/xinput.d				\
+	rhbz_453358/case1/xinput.d/test-scim.conf		\
+	rhbz_453358/case1/xinput.d/test-scim2.conf		\
+	rhbz_453358/case1/xinputrc				\
 	$(NULL)
+
 ##
 # Local Rules
 dist-hook:
