@@ -1,0 +1,1 @@
+/home/tagoh/work/imsettings/trunk/tests/testcases/rhbz_453358/case1/xinput.d/test-scim.conf
